--- a/gestion-empleados-frontend/src/app/app.component.html
+++ b/gestion-empleados-frontend/src/app/app.component.html
@@ -1,3 +1,14 @@
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark text-white">
+   <ul class="navbar-nav">
+      <li class="nav-item mx-3">
+         <a routerLink="empleados" routerLinkActive="active" class="nav-link">Lista de Empleados</a>
+      </li>
+      <li class="nav-item mx-3">
+         <a routerLink="registrar-empleado" routerLinkActive="active" class="nav-link">Añadir Empleado</a>
+      </li>
+   </ul>
+</nav>
+
 <h1 class="text-center mt-3">{{title}}</h1>
 <div class="container">
    <router-outlet></router-outlet>
