--- a/gestion-empleados-frontend/src/app/Components/actualizar-empleado/actualizar-empleado.component.html
+++ b/gestion-empleados-frontend/src/app/Components/actualizar-empleado/actualizar-empleado.component.html
@@ -1,19 +1,75 @@
 <div class="col-md-6 offset-md-3">
-    <h3 class="text-center">Edición de empleado</h3>
-    <form (ngSubmit)= "onSubmit()" #empleadoForm = "ngForm">
+  <h3 class="text-center">Registro de Empleado</h3>
+  <form (ngSubmit)="onSubmit()" #empleadoForm = "ngForm">
       <div class="form-group">
-        <label class="mb-1" >Nombre : </label>
-        <input  type = "text" class="form-control" id = "nombre" [(ngModel)] = "empleado.nombre" name = "nombre">
+          <label class="mb-1">Nombre:</label>
+          <input type="text" class="form-control " id="nombre" 
+              [(ngModel)]="empleado.nombre" name="nombre" 
+              required 
+              placeholder="Digite su nombre"
+              minlength="4"
+              maxlength="10"
+              #nombre = "ngModel"
+          >
+
+              <div class="alert alert-danger" *ngIf="nombre.invalid && (nombre.dirty || nombre.touched)">
+                  <div *ngIf="nombre.errors.required">
+                      Digite su nombre por favor
+                  </div>
+                  <div *ngIf="nombre.errors.minlength">
+                      El nombre tiene que contener como minimo 4 caracteres
+                  </div>
+                  <div *ngIf="nombre.errors.maxlength">
+                      El nombre puede contener como maximo 10 caracteres
+                  </div>
+              </div>
       </div>
-  
       <div class="form-group">
-        <label class="my-1">Apellido : </label>
-        <input type = "text" class="form-control my-1" id = "apellido" [(ngModel)] = "empleado.apellido" name = "apellido">
+          <label class="my-1">apellido:</label>
+          <input type="text" class="form-control" id="apellido" [(ngModel)]="empleado.apellido" name="apellido"
+              required 
+              placeholder="Digite su apellido"
+              minlength="4"
+              maxlength="10"
+              #apellido = "ngModel"
+          >
+          <div class="alert alert-danger" *ngIf="apellido.invalid && (apellido.dirty || apellido.touched)">
+              <div *ngIf="apellido.errors.required">
+                  Digite su apellido por favor
+              </div>
+              <div *ngIf="apellido.errors.minlength">
+                  El apellido tiene que contener como minimo 4 caracteres
+              </div>
+              <div *ngIf="apellido.errors.maxlength">
+                  El apellido puede contener como maximo 10 caracteres
+              </div>
+          </div>
+
+
       </div>
-        <div class="form-group">
-        <label class="my-1">Email : </label>
-        <input type = "email" class="form-control my-1" id = "email" [(ngModel)] = "empleado.email" name = "email">
+      <div class="form-group">
+          <label class="my-1">Email:</label>
+          <input type="email" class="form-control" id="email" [(ngModel)]="empleado.email" name="email"
+              required 
+              placeholder="Digite su email"
+              #email = "ngModel"
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+          >
+          <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || apellido.touched)">
+              <div *ngIf="email.errors.required">
+                  Digite su email por favor
+              </div>
+              <div *ngIf="email.errors.pattern">
+                  Por favor digite el email con el siguiente formato : user100@gmail.com
+              </div>
+              <div *ngIf="apellido.errors.maxlength">
+                  El apellido puede contener como maximo 10 caracteres
+              </div>
+          </div>
       </div>
-      <button class="btn btn-success px-5 mt-3">Guardar</button>
-    </form>
+      <div class="form-group">
+          <button class="btn btn-success mt-3 px-5" [disabled]="!empleadoForm.valid">Guardar</button>
+      </div>
+      
+  </form>
 </div>
