--- a/gestion-empleados-frontend/src/app/Components/actualizar-empleado/actualizar-empleado.component.html
+++ b/gestion-empleados-frontend/src/app/Components/actualizar-empleado/actualizar-empleado.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 offset-md-3">
-  <h3 class="text-center">Registro de Empleado</h3>
+  <h3 class="text-center">Editar de Empleado</h3>
   <form (ngSubmit)="onSubmit()" #empleadoForm = "ngForm">
       <div class="form-group">
           <label class="mb-1">Nombre:</label>
